appId: com.backtrackai.backtrack
---
- launchApp
- assertVisible: 'Memories'
- tapOn: 'Memories'
- assertVisible: 'Memories'
- assertVisible: 'On This Day'
- assertVisible: '2 months ago'
- assertVisible: '4 months ago'
- assertVisible: '6 months ago'
- assertVisible: '8 months ago'
- assertVisible: '10 months ago'
- tapOn: 'On This Day'
- assertVisible: 'Memory Items'
- assertVisible: 'Back'
- tapOn: 'Back'
- assertVisible: 'Memories'
- tapOn: 'Settings'
- assertVisible: 'Memories Settings'
- assertVisible: 'Cadence'
- tapOn: 'Cadence'
- assertVisible: 'Daily'
- assertVisible: 'Weekly'
- tapOn: 'Weekly'
- assertVisible: 'Memories Settings'
- tapOn: 'Back'
- assertVisible: 'Memories'
